results/SVCOMP/specgen/log-StringStartEnd02-2024_03_03_05_24_55.txt
public class StringStartEnd02 {

  //@ ensures \result <==> args.length < 4;
  //@ ensures !\result ==> \result == 1;
  public static boolean f(String[] args) {
    if (args.length < 4)
      return false;
    int i = 0;

    //@ maintaining 0 <= j && j <= 4;
    //@ maintaining 0 <= i && i <= 4;
    //@ maintaining (\forall int k; 0 <= k && k < j; args[k].startsWith("te"));
    //@ decreases 4 - j;
    for (int j = 0; j < 4; j++) {
      if (args[j].startsWith("te"))
        ++i;
    }

    return i == 1;
  }
  
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:4: error: incomparable types: boolean and int
  //@ ensures !\result ==> \result == 1;
                                   ^
1 error

public class StringStartEnd02 {

  //@ ensures \result <==> args.length < 4;
  //@ ensures \result ==> (\exists int j; 0 <= j && j < 4; args[j].startsWith("te")) && (\forall int j; 0 <= j && j < 4; args[j].startsWith("te")) ==> (\exists int k; 0 <= k && k < 4; args[k].startsWith("te"));
  public static boolean f(String[] args) {
    if (args.length < 4)
      return false;
    int i = 0;

    //@ maintaining 0 <= j && j <= 4;
    //@ maintaining 0 <= i && i <= 4;
    //@ maintaining (\forall int k; 0 <= k && k < j; args[k].startsWith("te"));
    //@ decreases 4 - j;
    for (int j = 0; j < 4; j++) {
      if (args[j].startsWith("te"))
        ++i;
    }

    return i == 1;
  }
  
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3:) in method f
      return false;
      ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7:
  //@ ensures \result <==> args.length < 4;
      ^
2 verification failures

public class StringStartEnd02 {

  //@ ensures \result <==> args.length < 4;  
  //@ ensures \result ==> (\exists int j; 0 <= j && j < 4; args[j].startsWith("te")) && (\forall int j; 0 <= j && j < 4; args[j].startsWith("te")) ==> (\exists int k; 0 <= k && k < 4; args[k].startsWith("te"));
  public static boolean f(String[] args) {
    if (args.length < 4)
      return false;
    int i = 0;

    //@ maintaining 0 <= j && j <= 4;
    //@ maintaining 0 <= i && i <= 4;
    //@ maintaining (\forall int k; 0 <= k && k < j; args[k].startsWith("te"));
    //@ decreases 4 - j;
    for (int j = 0; j < 4; j++) {
      if (args[j].startsWith("te"))
        ++i;
    }

    return i == 1;
  }
  
}

/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3:) in method f
      return false;
      ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7:
  //@ ensures \result <==> args.length < 4;  
      ^
2 verification failures

public class StringStartEnd02 {

  //@ ensures \result <==> args.length <= 4;  
  //@ ensures \result ==> (\exists int j; 0 <= j && j < 4; args[j].startsWith("te")) && (\forall int j; 0 <= j && j < 4; args[j].startsWith("te")) ==> (\exists int k; 0 <= k && k < 4; args[k].startsWith("te"));
  public static boolean f(String[] args) {
    if (args.length < 4)
      return false;
    int i = 0;

    //@ maintaining 0 <= j && j <= 4;
    //@ maintaining 0 <= i && i <= 4;
    //@ maintaining (\forall int k; 0 <= k && k < j; args[k].startsWith("te"));
    //@ decreases 4 - j;
    for (int j = 0; j < 4; j++) {
      if (args[j].startsWith("te"))
        ++i;
    }

    return i == 1;
  }
  
}

/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3:) in method f
      return false;
      ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:7:
  //@ ensures \result <==> args.length <= 4;  
      ^
2 verification failures

public class StringStartEnd02 {

 
  //@ ensures \result ==> (\exists int j; 0 <= j && j < 4; args[j].startsWith("te")) && (\forall int j; 0 <= j && j < 4; args[j].startsWith("te")) ==> (\exists int k; 0 <= k && k < 4; args[k].startsWith("te"));
  public static boolean f(String[] args) {
    if (args.length < 4)
      return false;
    int i = 0;

    //@ maintaining 0 <= j && j <= 4;
    //@ maintaining 0 <= i && i <= 4;
    //@ maintaining (\forall int k; 0 <= k && k < j; args[k].startsWith("te"));
    //@ decreases 4 - j;
    for (int j = 0; j < 4; j++) {
      if (args[j].startsWith("te"))
        ++i;
    }

    return i == 1;
  }
  
}

/home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:15: verify: The prover cannot establish an assertion (InvariantLeaveCaller: /home/max/Documents/JMLGPT/openjml/specs/java/lang/CharSequence.jml:30:) in method f: (Caller: StringStartEnd02.f(java.lang.String[]), Callee: java.lang.String.startsWith(java.lang.String))
      if (args[j].startsWith("te"))
                            ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/CharSequence.jml:30: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringStartEnd02.java:15:
	//-RAC@ public invariant charArray != null; // FIXME - why this when there is a non_null declaration
	               ^
2 verification failures

